--- a/get2it/src/Components/Register/Register.css
+++ b/get2it/src/Components/Register/Register.css
@@ -28,6 +28,9 @@
   align-items: center;
   border-image: radial-gradient(silver, black) 50;
   border-bottom: 2px solid;
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
 }
 #registerIcon {
   color: rgba(192, 192, 192, 0.65);
